# aztools

./: README.md  pyproject.toml  view-secrets-expiring.py
global_config/: __init__.py  osconfig.py
